--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Aplikacija za crtanje slobodnom rukom
+description: Logate Akademija - Java developer (2019), domaći zadatak
